--- a/package.json
+++ b/package.json
@@ -8,16 +8,23 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package && cd ios && pod install"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.0",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "native-base": "3.4.0",
     "patch-package": "^7.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.72.1",
-    "react-native-safe-area-context": "^3.2.0",
-    "react-native-svg": "^12.1.1"
+    "react-native-gesture-handler": "^2.12.0",
+    "react-native-safe-area-context": "^4.6.4",
+    "react-native-screens": "^3.22.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -27,7 +34,9 @@
     "@react-native/metro-config": "^0.72.7",
     "@tsconfig/react-native": "^3.0.0",
     "@types/metro-config": "^0.76.3",
-    "@types/react": "^18.0.24",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
@@ -38,7 +47,7 @@
     "typescript": "4.8.4"
   },
   "resolutions": {
-    "@types/react": "^17"
+    "@types/react": "^18"
   },
   "engines": {
     "node": ">=16"
