--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.0",
     "react-native-svg": "^12.1.1",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "uuid-random": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
