--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.72.1",
+    "react-native-flipper": "^0.206.0",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.2.0",
+    "rn-flipper-async-storage-advanced": "^1.0.5",
     "uuid-random": "^1.3.2"
   },
   "devDependencies": {
