--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@shopify/flash-list": "^1.5.0",
     "lodash": "^4.17.21",
     "native-base": "3.4.0",
     "patch-package": "^7.0.0",
@@ -23,6 +24,7 @@
     "react-native": "0.72.1",
     "react-native-flipper": "^0.206.0",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.0",
     "react-native-svg": "^12.1.1",
