--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
     "prebuild": "npx expo prebuild"
   },
   "dependencies": {
+    "@devvie/bottom-sheet": "^0.2.0",
     "@expo-google-fonts/space-grotesk": "^0.2.2",
     "@react-native-async-storage/async-storage": "1.19.3",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.2",
     "@shopify/flash-list": "^1.6.1",
+    "@shopify/react-native-skia": "^0.1.222",
     "apisauce": "3.0.1",
+    "d3": "^7.8.5",
     "date-fns": "^2.30.0",
     "expo": "^49.0.18",
     "expo-application": "~5.4.0",
@@ -56,6 +59,7 @@
     "react-native": "0.72.6",
     "react-native-drawer-layout": "^4.0.0-alpha.1",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-liquid-gauge": "^0.1.3",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
@@ -71,6 +75,7 @@
     "@babel/plugin-transform-template-literals": "^7.0.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@types/d3": "^7.4.3",
     "@types/i18n-js": "3.8.2",
     "@types/jest": "^29.2.1",
     "@types/react": "~18.2.14",
